@@ -1,3 +1,4 @@
+Constrained velocity sensor node to remain in the play area
 Refactored MediumControlPanel to use PhetPComboBox instead of PComboBox, see #705
 # 0.00.46 (50881) Apr 19, 2011
 Fixed: reset all does not return the laser to default position, affects all tabs
